<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Marine Shrimp Culture</string>
    <string name="about_us">About us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="know_your_shrimp_label">Know your shrimp</string>
    <string name="common_name">Common name</string>
    <string name="common_description">Description</string>
    <string name="common_distripution">Distribution</string>
    <string name="common_stocking_density">Stocking density</string>
    <string name="common_tolerance">Tolerance</string>
    <string name="common_protein_requirement">Protein requirement</string>
    <string name="common_survival">Survival</string>
    <string name="common_market_value">Market value</string>
    <string name="common_spf_stock">SPF stock</string>
    <string name="common_problems">Problems</string>
    <string name="common_species_label">Common species</string>
    <string name="site_criteria">Site Selection criteria</string>
    <string name="site_water">Water quality</string>
    <string name="site_tidal">Tidal fluctuations</string>
    <string name="site_soil">soil</string>
    <string name="site_topography">Topography</string>
    <string name="site_vegetation">Vegetation</string>
    <string name="site_seed">Source of seed</string>
    <string name="site_accessibility">Accessibility</string>
    <string name="site_factors">Other factors</string>
    <string name="site_source">Source</string>
    <string name="site_selection_label">Site selection</string>
    <string name="water_quality_label">Water quality</string>
    <string name="design_and_consruction">Design and construction</string>
    <string name="management_practice">Management practice</string>
    <string name="harvest_and_postharvest">Harvest and postharvest</string>
    <string name="diseases_and_biosecurity">Diseases and biosecurity</string>
    <string name="traditional_modern">Traditional and modern shrimp culture</string>
    <string name="Sources">Sources</string>
    <string name="setting_location_title">Location</string>
    <string name="setting_Temperature_title">Temperature Unit</string>
    <string name="setting_Notification_title">Notifications</string>
    <string name="Settings">Settings</string>
    <string name="Language">Language</string>
    <string name="Weather">Weather</string>
    <string name="temp_degree">"°"</string>
    <string name="humidity">"Humidity: \t"</string>
    <string name="not_predicted">" Not Predicted! "</string>
    <string name="grnd_level">"Grnd level: \t"</string>
    <string name="sea_level">"Sea level: \t" </string>
    <string name="wind_speed">"Wind speed: \t"</string>
    <string name="wind_degree">"Wind degree: \t" </string>
    <string name="wind">"Wind: \t" </string>
    <string name="pressure">"Pressure: \t" </string>
    <string name="no_internet_connection">"No internet connection"</string>
    <string name="Retry">"Retry"</string>
    <string name="app_hashtag">"#marineshrimpculture"</string>
    <string name="failed">failed</string>
    <string name="format_wind_kmh">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h
        <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <string name="SavedWeather">SavedWeather</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="save">saveweather</string>
    <string name="modern">Modern</string>
    <string name="traditional">Traditional</string>
    <string name="bacterial">Bacterial</string>
    <string name="viral_disease">Viral disease</string>
    <string name="biosecurity">Biosecurity</string>
    <string name="harvest">Harvest</string>
    <string name="methods_of_harvesting">Methods of harvesting</string>
    <string name="be_careful">Be careful</string>
    <string name="post_harvest">Post harvest</string>
    <string name="pond_preparation">Pond Preparation</string>
    <string name="seed_source">Seed source</string>
    <string name="seed_selection">Seed selection</string>
    <string name="seed_count">Seed count</string>
    <string name="acclimation">Acclimation</string>
    <string name="stock">Stock</string>
    <string name="feeding">Feeding</string>
    <string name="design_and_construction">Design and construction</string>
    <string name="size_and_shape">Size and Shape</string>
    <string name="dikes">Dikes</string>
    <string name="supply_and_drain">Supply and drain</string>
    <string name="water_gate">Water gate</string>
    <string name="min">min: \t</string>
    <string name="maxlabel">max: \t</string>
    <string name="newLine">\n</string>
    <string name="traditional_activity_image">traditional activity image</string>
    <string name="biosecurity_activity_image">biosecurity activity image</string>
    <string name="diseases_activity_image">diseases</string>
    <string name="harvest_and_post_harvest">harvest and post harvest actiivity image</string>
    <string name="management_practice2">management practice image</string>
    <string name="design_and_construction_image">design and construction image</string>
    <string name="water_quality_image">water quality image</string>
    <string name="site_selection_image">site selection image</string>
    <string name="common_species_image">common species image</string>
    <string name="know_your_shrimp_image">know your shrimp image</string>
    <string name="card_rv_image">card image</string>
    <string name="weather_image">weather image</string>
    <string name="widget_image">widget image</string>
    <string name="app_tag">Marine Shrimp App</string>
    <string name="Penaeusmonodon">Penaeus monodon</string>
    <string name="commonName">Giant tiger prawn that Named for its huge size and banded tail.</string>
    <string name="commonspeciesdescription">Females can reach about 33 cm (13 in) long and weight 200–320 g."\n"
                "males are slightly smaller at 20–25 cm (8–10 in) long and weighing 100–170 g." "\n"
                "the carapace and abdomen are transversely banded with alternative red and white."
                " The antennae are grayish brown. Brown pereiopods and pleopods are present with fringing setae in red.</string>
    <string name="commonspeciesdistribution">its natural distribution is the Indo-Pacific, ranging from the eastern coast of Africa and the Arabian Peninsula, as far as Southeast Asia, the Pacific Ocean, and northern Australia.</string>
    <string name="commonspeciesstocking">25000-50000/hectare.</string>
    <string name="commonspeciestolerance">They tolerate a wide range of salinities and temperatures.</string>
    <string name="commonspeciesprotein">Protein between 40 and 50 gave the best growth.</string>
    <string name="commonspeciessurvival">survivals are low (20 to 30). Tigers are very susceptible to two of the most lethal shrimp viruses: yellow head and white spot disease.</string>
    <string name="commonspeciesmarket">3.\tIts price is still higher than L. vannamei.
        1.\tPenaeus monodon is the most prominent farmed crustacean product in international trade.\n"
                "2.\tp.monodon has driven a significant expansion in aquaculture in many developing countries in Asia.\n" </string>
    <string name="commonspeciesspf">Based on the highly successful development of Specific Pathogen Free (SPF)  of Penaeus vannamei brood stock ,the U.S. shrimp industry develop a stock of SPF P. monodon which is the most important (in volume and value) farm-raised shrimp worldwide.\n"
                "Major elements of an SPF process include:\n"
                "1.\tCapture of apparently healthy wild stock from areas of low disease prevalence.\n"
                "2.\tIndividual primary quarantine where the shrimp can be individually screened for specific pathogens and the contaminated individuals destroyed.\n"
                "3.\tThe shrimp are then transferred to secondary quarantine where they are reared to brood stock size and monitored regularly.\n"
                "4.\tThe disease-free broodstock transferred to the breeding center for production.\n"
                "5.\tLarvae are then reared in bio secure hatcheries.\n"
                "\n</string>
    <string name="PenaeusVannameititle">Penaeus Vannamei</string>
    <string name="PenaeusVannameicommonname">Western White Shrimp or King prawn.</string>
    <string name="vdescription">Vannamei grows to a maximum length of 230 millimeters (9.1 in), with a carapace length of 90 mm (3.5 in)"+"\n"
                "Adults live in the ocean, at depths of up to 72 meters (236 ft), while juveniles live in estuaries.""\n"
                "The rostrum is moderately long, with 7–10 teeth on the dorsal side and 2–4 teeth on the ventral side"</string>
    <string name="commonspeciesproblem">shortages of wild broodstock often exist, captive breeding is difficult and hatchery.</string>
    <string name="vdiscription2">Native to the Pacific coast of Central and South America</string>
    <string name="vstocking">Can be cultured in high stocking densities up to 60/m2</string>
    <string name="vtolerance">They tolerate a wide range of salinities 0.5 to 45 ppt and low temperatures can reach 15 c.</string>
    <string name="vprotein">Can tolerate low protein feed 20%: 35%</string>
    <string name="vsurvival">high from 50 to 60%.</string>
    <string name="vmarket">Has a very good market but less than monodon.</string>
    <string name="vspf">Commercial availability of SPF and high health stock is an added advantage.</string>
    <string name="design1title">Design And Destruction</string>
    <string name="design1description">There is no standard design for a shrimp rearing pond.\n"
                " Present day farming practices still heavily rely on the experience of individual farmers, financial capability and the environmental condition prevailing at the site.\n"
                " A shrimp pond from the engineering view point is essential an improved finfish culture pond.\n"
                "The improved structural design is largely due to the behavior of the Penaeid shrimps.\n"
                "Penaeid shrimps are benthic animals and it has a habit of gathering along tank walls. \n"
                "Any design to increase the wall surface eg. adding substrates or an elevated earthen platform extending along the edges of a pond, can promote high stocking densities.\n"
                "An ideal shrimp farm is a complex establishment consisting of: \n"
                "1- various size ponds for nursery and grow-out\n"
                "2- water control structures including embankments, supply and drainage canals and sluice gates\n"
                "3- support facilities such as roads, bridges, living quarters, workshops and warehouses, etc.\n"
                "Careful layout of the described facilities and appropriate structural design in relation to the physical features of the area ensure smooth and effective operational management.\n"
                "\n </string>
    <string name="DiseasesAndViralDiseaseDatatitle">Bacterial shell disease</string>
    <string name="DiseasesAndViralDiseaseSummery1">This disease is also called as brown spot shell disease / burned spot disease / rust disease /
                shell disease or blackspot disease</string>
    <string name="DiseasesandViralDiseasesTitle1">clinical signs</string>
</resources>