<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutStyle"
    tools:context=".view.SiteSelection"
    android:id="@+id/site_scrollview">

    <LinearLayout
        style="@style/MiniLayoutStyle"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/topic_img"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="fitXY"
            android:elevation="8dp"
            android:background="#fff"
            />
        <TextView
            android:id="@+id/site_description_tv"
            style="@style/ArticleDescription"
            />
        <TextView
            style="@style/ArticleTitle"
            android:text="@string/site_criteria"
            />
        <TextView
            android:id="@+id/site_criteria_tv"
            style="@style/ArticleDescription"/>

        <TextView
            style="@style/ArticleTitle"
            android:text="@string/site_water"
            />
        <TextView
            android:id="@+id/site_water_tv"
            style="@style/ArticleDescription"/>

        <TextView
            android:text="@string/site_tidal"
            style="@style/ArticleTitle" />

        <TextView
            android:id="@+id/site_tidal_tv"
            style="@style/ArticleDescription" />

        <TextView
            android:text="@string/site_soil"
            style="@style/ArticleTitle"/>

        <TextView
            android:id="@+id/site_soil_tv"
            style="@style/ArticleDescription"/>

        <TextView
            style="@style/ArticleTitle"
            android:text="@string/site_topography"
            />
        <TextView
            android:id="@+id/site_topography_tv"
            style="@style/ArticleDescription"/>

        <TextView
            style="@style/ArticleTitle"
            android:text="@string/site_vegetation"
            />

        <TextView
            android:id="@+id/site_vegetation_tv"
            style="@style/ArticleDescription"/>

        <TextView
            style="@style/ArticleTitle"
            android:text="@string/site_seed"
            />
        <TextView
            android:id="@+id/site_seed_tv"
            style="@style/ArticleDescription"/>

        <TextView
            style="@style/ArticleTitle"
            android:text="@string/site_accessibility"
            />

        <TextView
            android:id="@+id/site_accessibility_tv"
            style="@style/ArticleDescription"/>

        <TextView
            style="@style/ArticleTitle"
            android:text="@string/site_factors"
            />

        <TextView
            android:id="@+id/site_factors_tv"
            style="@style/ArticleDescription"/>

        <TextView
            style="@style/ArticleTitle"
            android:text="@string/site_source"
            />

    </LinearLayout>

</ScrollView>