<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:title="@string/setting_location_title"
        android:key="location"
        />
    <EditTextPreference
        android:title="@string/setting_Temperature_title"
        android:key="temperature"
        />
    <SwitchPreference
        android:title="@string/setting_Notification_title"
        android:key="notification"
        android:summary="get weather notifications"
        android:defaultValue="true"
        />

    <ListPreference
        android:key="language"
        android:title="@string/Language"
        android:defaultValue="English"
        android:entries="@array/Langyages"
        android:entryValues="@array/Langyages"
        />

</PreferenceScreen>