<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutStyle"
    tools:context=".view.CommonSpecies"
    android:id="@+id/mainScrollView">
    <LinearLayout
        android:id="@+id/common_linear"
        style="@style/LayoutStyle"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/topic_img"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="fitXY"
            android:background="#fff"
            android:elevation="8dp"/>

        <TextView
            android:id="@+id/common_title_tv"
            android:layout_gravity="center"
            style="@style/ArticleTitle"
            />

        <TextView
            style="@style/ArticleTitle"
            android:text="@string/common_name"
            />
        <TextView
            android:id="@+id/common_name_tv"
            style="@style/ArticleDescription"
            />

        <TextView
            style="@style/ArticleTitle"
            android:text="@string/common_description"
            />
        <TextView
            android:id="@+id/common_description_tv"
            style="@style/ArticleDescription"
            />


        <TextView
            style="@style/ArticleTitle"
            android:text="@string/common_distripution"
            />
        <TextView
            android:id="@+id/common_distribution_tv"
            style="@style/ArticleDescription"
            />

        <TextView
            style="@style/ArticleTitle"
            android:text="@string/common_stocking_density"
            />
        <TextView
            android:id="@+id/common_stocking_density_tv"
            style="@style/ArticleDescription"
            />

        <TextView
            style="@style/ArticleTitle"
            android:text="@string/common_tolerance"
            />
        <TextView
            android:id="@+id/common_tolerance_tv"
            style="@style/ArticleDescription"
            />

        <TextView
            style="@style/ArticleTitle"
            android:text="@string/common_protein_requirement"
            />
        <TextView
            android:id="@+id/common_protein_requirement_tv"
            style="@style/ArticleDescription"
            />

        <TextView
            style="@style/ArticleTitle"
            android:text="@string/common_survival"
            />
        <TextView
            android:id="@+id/common_survival_tv"
            style="@style/ArticleDescription"
            />

        <TextView
            style="@style/ArticleTitle"
            android:text="@string/common_market_value"
            />
        <TextView
            android:id="@+id/common_market_value_tv"
            style="@style/ArticleDescription"
            />


        <TextView
            style="@style/ArticleTitle"
            android:text="@string/common_spf_stock"
            />
        <TextView
            android:id="@+id/common_spf_stock_tv"
            style="@style/ArticleDescription"
            />

        <TextView
            android:id="@+id/problems_label"
            style="@style/ArticleTitle"
            android:text="@string/common_problems"

            />
        <TextView
            android:id="@+id/common_problems_tv"
            style="@style/ArticleDescription"
            />

        <LinearLayout
            style="@style/MiniLayoutStyle"
            android:layout_gravity="bottom"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/previous_button"
                style="@style/NextAndPreviousButton"
                android:onClick="goToPrevious"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:src="@drawable/ic_left_arrow"
                android:text="Previous" />


            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                style="@style/NextAndPreviousButton"
                android:elevation="4dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_right_arrow"
                android:onClick="goToNext"
                android:text="Next" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>