<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    style="@style/LayoutStyle"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.ManagementPractice"
    >


    <Button
        android:id="@+id/pond_preparation_btn"
        style="@style/ButtonsStyle"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/pond_preparation"
        app:layout_constraintBottom_toTopOf="@+id/seed_source_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/seed_source_btn"
        style="@style/ButtonsStyle"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/seed_source"
        app:layout_constraintBottom_toTopOf="@+id/seed_selection_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/seed_selection_btn"
        style="@style/ButtonsStyle"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/seed_selection"
        app:layout_constraintBottom_toTopOf="@+id/seed_count_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/seed_count_btn"
        style="@style/ButtonsStyle"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/seed_count"
        app:layout_constraintBottom_toTopOf="@+id/acclimation_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/acclimation_btn"
        style="@style/ButtonsStyle"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/acclimation"
        app:layout_constraintBottom_toTopOf="@+id/stock_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stock_btn"
        style="@style/ButtonsStyle"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/stock"
        app:layout_constraintBottom_toTopOf="@+id/feeding_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/feeding_btn"
        style="@style/ButtonsStyle"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/feeding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
