<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutStyle"
    tools:context=".view.ManagementPractice2"
    android:id="@+id/management_scrollview">

    <LinearLayout
        style="@style/LayoutStyle"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/management_practice_img"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="350dp"
            android:background="#fff"
            android:elevation="8dp"
            android:contentDescription="@string/management_practice2" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/image_buttons"
            style="@style/LayoutStyle"
            android:visibility="invisible"
            >

            <ImageButton
                android:id="@+id/image_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_left_chevron"
                android:contentDescription="@string/previous"
                android:visibility="invisible"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/image_next"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/image_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_right_chevron"
                android:background="@android:color/transparent"
                android:contentDescription="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>


        <TextView
            android:id="@+id/management_practice_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="5dp"
            android:textDirection="ltr"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/management_practice_description_tv"
            style="@style/ArticleDescription"
            />

        <LinearLayout
            android:id="@+id/management_linearlayout"
            style="@style/MiniLayoutStyle"
            android:visibility="invisible"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <ImageButton
                android:id="@+id/management_previous_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_left_arrow"
                android:contentDescription="@string/previous"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/management_next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_right_arrow"
                android:background="@android:color/transparent"
                android:contentDescription="@string/next"
                android:layout_gravity="start"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>